syntax = "proto3";

package calculator;

option go_package = "github.com/SarathLUN/udemy-grpc-go-course/calculator_solution;calculatorpb";

message SumRequest{
    int32 first_number=1;
    int32 second_number=2;
}

message SumResponse{
    int32 result=1;
}

service DoSum{
    rpc Sum(SumRequest) returns (SumResponse){};
}
